--- a/Steak/FE/index.html
+++ b/Steak/FE/index.html
@@ -757,6 +757,7 @@
 </head>
 <body>
   <h1>⚡LIGHTNING SURGE⚡</h1>
+  <div style="position:fixed;bottom:10px;right:10px;font-size:16px;color:#ff0;background:#000;padding:5px 10px;border-radius:5px;z-index:9999;">v1.25</div>
   
   <div id="replayBanner" class="replay-banner" style="display: none;">
     🔄 REPLAY MODE
